# Prj0821

./: .gitignore  LICENSE
godot/: Prj0821.gdextension  Sprite-0002.png.import  computer_tset.tscn  daka.png.import  export_presets.cfg  icon.svg.import  new_theme.tres  project.godot
godot/Scene/: MainScene.tscn
godot/Scene/BossOfficeScene/: BossOffice.tscn
godot/Scene/CorridorScene/: Corridor.tscn
godot/Scene/DeskScene/: Desk.tscn
godot/Scene/OfficeScene/: Office.tscn
godot/Scene/Player/: PlayerDialogBubble.tscn
godot/Scene/PopupDialog/: SpeechBubble.tscn  new_style_box_texture.tres  对话框1.png.import
godot/assets/MouseIcon/: WindoseCursor.png.import  touch_mouse_icon.png.import
godot/assets/Player/: 主角对话框.png.import
godot/assets/computer/: WINDOWS.png.import  WindoseCursor.png.import  lamp.gdshader  windose1.jpg.import  windose_demo.png.import  光标.png.import  关闭按钮.png.import  图层 9.png.import  窄窗口.png.import  窄窗口背景.png.import  窗口.png.import  窗口背景.png.import
godot/assets/desk/: 手.PNG.import
godot/custom_res/CyberPet/: CyberPet.tscn
godot/font/: fusion pixel.otf.import  silver.ttf.import  windose_demo.png.lnk  中文像素.ttf.import  凤凰点阵体（12px）.ttf.import  凤凰点阵体（16px）.ttf.import  柳宋.ttf.import
godot/text/: bumps.json
rust/: Cargo.toml
rust/src/: cat_window.rs  cyber_cat.rs  cyber_pet.rs  daka.rs  desk_collegue.rs  desk_scene.rs  game_manager.rs  lib.rs  mini_app.rs  office_scene.rs  pet_button.rs  pet_editor.rs  pet_editor_ui.rs  player.rs  player_speech_bubble.rs  speech_bubble.rs  windose.rs  work_window.rs
(+35 files in other folders)
