[package]
name = "prj0821"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
rand="*"
time = { version = "0.3", features = ["macros"] }
#serde="*"
serde_json="*"